lib/tests/fixtures/compiler/parser/class_metaparam.baseline
Error: class_metaparam.pp:1:11: parameter $require is reserved for resource metaparameter 'require'.
  class foo($require) {
            ^~~~~~~~
